# CveVulnerabilitiesApi

./: .gitignore  Dockerfile  README.md  app.yml  app_build.sh
app/: Procfile  pyproject.toml  requirements.txt
app/api/: admin.py  models.py  serializers.py  urls.py  views.py
app/api/migrations/: 0001_initial.py  0002_rename_cve_cvemodel.py  0003_alter_cvemodel_options_alter_cvemodel_table.py
app/api/testing/: setUpData.py  test_cveid.py  test_date.py  test_models.py  test_query.py
app/coreApp/: ApiPaginacion.py  asgi.py  settings.py  urls.py  wsgi.py
app/staticfiles/: file.1f630d0f175d.txt  staticfiles.json
app/utils/: handlerExceptions.py  views.py
